@@ -117,17 +117,18 @@ jobs:
                                   -AliasesToExport $aliasesToExport `
                                   -CompanyName "Microsoft" `
                                   -ReleaseNotes $versionReleaseNotes
-          
+
+            $certFileName = Join-Path $ENV:TEMP "$([GUID]::NewGuid().ToString()).pfx"
+            Download-File -sourceUrl '${{ secrets.CodeSignCertificateUrl }}' -destinationFile $certFileName
+
             Remove-Module BcContainerHelper
           
             Write-Host $path
            
             Write-Host "Signing scripts"
-            $certFileName = Join-Path $ENV:TEMP "$([GUID]::NewGuid().ToString()).pfx"
-            Download-File -sourceUrl '${{ secrets.CodeSignCertificateUrl }} -destinationFile $certFileName
             $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2($certFileName, '${{ secrets.CodeSignCertificatePassword }}')
-            $filesToSign = @((Get-ChildItem 'C:\src\github\microsoft\navcontainerhelper' -Filter "*.ps1" -Recurse -Depth 99).FullName)+
-                           @((Get-ChildItem 'C:\src\github\microsoft\navcontainerhelper' -Filter "*.psm1" -Recurse -Depth 99).FullName)
+            $filesToSign = @((Get-ChildItem $path -Filter "*.ps1" -Recurse -Depth 99).FullName)+
+                           @((Get-ChildItem $path -Filter "*.psm1" -Recurse -Depth 99).FullName)
             Set-AuthenticodeSignature -Certificate $cert -HashAlgorithm SHA256 -TimestampServer "http://timestamp.digicert.com" -FilePath $filesToSign
 
             Write-Host "Upload to storage (preview)"
@@ -138,12 +139,10 @@ jobs:
             Set-AzureStorageBlobContent -File "$($path).zip" -Context $storageContext -Container 'public' -Blob "$version-$prerelease.zip" -Force | Out-Null
             Set-AzureStorageBlobContent -File "$($path).zip" -Context $storageContext -Container 'public' -Blob "preview.zip" -Force | Out-Null
           
-            # Write-Host "Publishing Module"
-            # Publish-Module -Path $path -NuGetApiKey '${{ secrets.NugetKey }}' -SkipAutomaticTags
+            Write-Host "Publishing Module"
+            Publish-Module -Path $path -NuGetApiKey '${{ secrets.NugetKey }}' -SkipAutomaticTags
           }
           catch {
             Write-Host "::Error::Error publishing module. Error was $($_.Exception.Message)"
             $host.SetShouldExit(1)
           }
-
-          
